// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInput > renders click 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_medium__1vl8ympd styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__1vl8ymp3 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_18_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_1c_"
            aria-describedby="_r_1c_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_1c_"
                aria-expanded="true"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_dropdownVisible_true__y472cy8 selectBar_size_medium__y472cyb selectBar_state_neutral__y472cye selectBar_undefined_compound_0__y472cyg"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__y472cy3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="dropdown__gk9hqs1 styles__pjfil54"
              id="_r_1c_"
              role="dialog"
              style="--_1meq2bv0: -5px; --_1meq2bv1: 0px; --_1meq2bv2: rotate(180deg); --_1meq2bv4: translate3d(0px, 4px, 0); --_1meq2bv5: 0ms; --_1meq2bv6: translate3d(0px, 4px, 0); --_1meq2bv7: 100%; --gk9hqs0: 100%; opacity: 1;"
            >
              <div
                class="styles__pjfil52"
              >
                <div
                  class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                >
                  <div
                    class="dropdown__gk9hqs2 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d"
                    id="select-dropdown"
                    role="listbox"
                  >
                    <div
                      class="dropdown__gk9hqs8 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.125rem_xxsmall__mxir935d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="kb"
                        aria-selected="false"
                        class="dropdown__gk9hqsc dropdown__gk9hqsb dropdown__gk9hqsa dropdown_size_medium__gk9hqsf"
                        data-testid="option-kb"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__mxir930 styles_alignItems_normal_xxsmall__mxir931 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                          data-testid="option-stack-kb"
                        >
                          <div
                            class="dropdown__gk9hqsq styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_space-between_xxsmall__mxir9377"
                          >
                            <span
                              class="dropdown__gk9hqsp style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
                              style="--textAlign__1eu8od80: left;"
                            >
                              KB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="mb"
                        aria-selected="false"
                        class="dropdown__gk9hqsc dropdown__gk9hqsb dropdown__gk9hqsa dropdown_size_medium__gk9hqsf"
                        data-testid="option-mb"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__mxir930 styles_alignItems_normal_xxsmall__mxir931 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                          data-testid="option-stack-mb"
                        >
                          <div
                            class="dropdown__gk9hqsq styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_space-between_xxsmall__mxir9377"
                          >
                            <span
                              class="dropdown__gk9hqsp style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
                              style="--textAlign__1eu8od80: left;"
                            >
                              MB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="gb"
                        aria-selected="false"
                        class="dropdown__gk9hqsc dropdown__gk9hqsb dropdown__gk9hqsa dropdown_size_medium__gk9hqsf"
                        data-testid="option-gb"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__mxir930 styles_alignItems_normal_xxsmall__mxir931 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
                          data-testid="option-stack-gb"
                        >
                          <div
                            class="dropdown__gk9hqsq styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.25rem_xxsmall__mxir935j styles_justifyContent_space-between_xxsmall__mxir9377"
                          >
                            <span
                              class="dropdown__gk9hqsp style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
                              style="--textAlign__1eu8od80: left;"
                            >
                              GB
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_0_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_4_"
            aria-describedby="_r_4_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_4_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_6e_"
        />
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__1vl8ympc styles_disabled__1vl8ymp7 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            disabled=""
            id="_r_6e_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
            value="1"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_6m_"
            aria-describedby="_r_6m_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_6m_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cym style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_28__1yhcak822"
                >
                  KB
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with disabled and placeHolder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_disabled__1vl8ymp7 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            disabled=""
            id="_r_28_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_2c_"
            aria-describedby="_r_2c_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_2c_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with dropdownAlign center 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_2i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_2m_"
            aria-describedby="_r_2m_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_2m_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error  and success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_error__1vl8ymp8 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-describedby="_r_3l_"
            aria-invalid="true"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_3k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_3o_"
            aria-describedby="_r_3o_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_3o_"
                aria-describedby="_r_3l_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_3l_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_error__1vl8ymp8 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-describedby="_r_39_"
            aria-invalid="true"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_38_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_3c_"
            aria-describedby="_r_3c_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_3c_"
                aria-describedby="_r_39_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_39_"
        role="status"
      >
        error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_5i_"
        >
          label
        </label>
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__1vl8ympc styles_disabled__1vl8ymp7 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            disabled=""
            id="_r_5i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_5q_"
            aria-describedby="_r_5q_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_5q_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and no label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <label
        class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
        for="_r_56_"
      >
        label
      </label>
      <div
        class="styles_large__1vl8ympc styles_disabled__1vl8ymp7 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            disabled=""
            id="_r_56_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_5c_"
            aria-describedby="_r_5c_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_5c_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_a_"
            max="100"
            min="10"
            name="-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input--unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with no label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
      >
        <label
          class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_60_"
        />
        <span
          class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__1vl8ympc styles_disabled__1vl8ymp7 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            disabled=""
            id="_r_60_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_68_"
            aria-describedby="_r_68_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_68_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_1u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_22_"
            aria-describedby="_r_22_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_22_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size medioum 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_medium__1vl8ympd styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__1vl8ymp3 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_u_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_12_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_medium__y472cyb selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__y472cy3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_small__1vl8ympe styles_default__1vl8ymp6 styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_small__1vl8ymp4 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_k_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_o_"
            aria-describedby="_r_o_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_o_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_small__y472cyc selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__y472cy3 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        class="styles_large__1vl8ympc styles_success__1vl8ympa styles__1vl8ymp5 styles__78oem50"
        style="--ivy5ld0: 1fr auto; --ivy5ld1: 1fr auto; --ivy5ld2: 1fr auto; --ivy5ld3: 1fr auto; --ivy5ld4: 1fr auto; --ivy5ld5: 1fr auto;"
      >
        <div
          class="styles__1vl8ympb"
          id="input-field"
        >
          <input
            aria-describedby="_r_2t_"
            aria-invalid="false"
            class="styles_large__1vl8ymp2 styles__1vl8ymp1"
            data-testid="unit-input"
            id="_r_2s_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzg uv_icons_1sbwqkz1j"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__1vl8ympg styles__1vl8ympf styles__gqqb10"
          style="--_1vl8ymp0: 12.6rem;"
        >
          <div
            aria-controls="_r_30_"
            aria-describedby="_r_30_"
            class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
            tabindex="-1"
          >
            <div
              class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
            >
              <div
                aria-controls="_r_30_"
                aria-describedby="_r_2t_"
                aria-expanded="false"
                class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                  style="--whiteSpace__1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_success__1yhcak8e style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_56__1yhcak82u"
        id="_r_2t_"
        role="status"
      >
        text
      </span>
    </div>
  </div>
</DocumentFragment>
`;
